	- without lex no attempt to use it.
	- unsecure response validation collated into one block.
	- remove warning about const cast of cfgfile name.
	- outgoing-interfaces can be different from service interfaces.
	- ldns-src configure is done during unbound configure and
	  ldns-src make is done during unbound make, and so inherits the
	  make arguments from the unbound make invocation.
	  
18 October 2007: Wouter
	- addresses are logged with errors.
	- fixup testcode fake event to remove pending before callback
	  since the callback may create new pending items.
	- tests updated because retries are now in iterator module.
	- ldns-testpkts code is checked for differences between unbound
	  and ldns by makedist.sh.
	- ldns trunk from today added in svn repo for fallback in case
	  no ldns is installed on the system.
	  make download_ldns refreshes the tarball with ldns svn trunk.
	- ldns-src.tar.gz is used if no ldns is found on the system, and
	  statically linked into unbound.
	- start of regional allocator code.
	- regional uses less memory and variables, simplified code.
	- remove of region-allocator.
	- alloc cache keeps a cache of recently released regional blocks,
	  up to a maximum.
	- make unit test cleanly free memory.

17 October 2007: Wouter
	- fixup another cycle detect and ns-addr timeout resolution bug.
	  This time by refusing delegations from the cache without addresses
	  when resolving a mandatory-glue nameserver-address for that zone.
	  We're going to have to ask a TLD server anyway; might as well be
	  the TLD server for this name. And this resolves a lot of cases where
	  the other nameserver names lead to cycles or are not available.
	- changed random generator from random(3) clone to arc4random wrapped
	  for thread safety. The random generator is initialised with
	  entropy from the system.
	- fix crash where failure to prime DNSKEY tried to print null pointer
	  in the log message.