@@ -11,6 +11,7 @@
 	- ldns-src configure is done during unbound configure and
 	  ldns-src make is done during unbound make, and so inherits the
 	  make arguments from the unbound make invocation.
+	- nicer error when libevent problem causes instant exit on signal.
 	  
 18 October 2007: Wouter
 	- addresses are logged with errors.
